- MediaAccess class can consider EXIF orientation in a JPEG file (require Exif and GD extension
  for PHP).
- Update phpseclib to version 1.0.0.
- The getNodeIdsHavingTargetFromNode method of INTERMediatorOnPage object accepts the array
  for the first parameter.
- Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
  in the Auth_Support directory.
- Utility methods, dateStringISO, dateStringFileMaker and timeString, are defined in INTERMediatorLib.
- Add Dockerfile for CircleCI.
- Be able to customize a style of the file uploading area when using the file upload component.
- LDAPAuth class can report errors.
- INTER-Mediator version can be described in the 'metadata.json' file, and dist-docs/build.sh
  can update the metadata.json.
- When the local context is stored in sessionStorage, the search and hash sections of the url of document
  are eliminated from the key of storage item.
- The 'storing' key in 'authentication' in the second option parameter of IM_Entry function
  supports the 'session-storage' key, and it stores credentials into sessionStorage object.
- All header description of source files are updated, and build.sh was adapted them.
- Update buster.js and package.json for unit testing.
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.